organized some thing with swagger
